K8S_Documentation/4.2 pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-example
  labels:
    app: nginx
spec:
  containers:
  - name: pod1
    image: nginx
    ports:
      - containerPort: 80
