K8S_Documentation/6.6 PV(static_provision).yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-web
  template:
    metadata:
      labels:
        app: static-web
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-storage
              mountPath: /usr/share/nginx/html
      volumes:
        - name: web-storage
          persistentVolumeClaim:
            claimName: static-pvc
