K8S_Documentation/6.7.2 PV(Dynamic_provision_with_EFS)..yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-nginx
spec:
  replicas: 5 # Testing ReadWriteMany across replicas
  selector:
    matchLabels:
      app: dynamic-web
  template:
    metadata:
      labels:
        app: dynamic-web
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: efs-storage
              mountPath: /usr/share/nginx/html
      volumes:
        - name: efs-storage
          persistentVolumeClaim:
            claimName: efs-pvc

#create services (node port or cluster ip for ease of understanding)
