K8S_Documentation/7.1 configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  labels:
    app: web
spec:
  containers:
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
---

apiVersion: v1
kind: Pod

metadata:
  name: configmap-pod-demo

spec:
  containers:
  - name: ubuntu

    image: ubuntu:22.04

    command:
      - "/bin/bash"
      - "-c"
      - "sleep 3600"

    volumeMounts:
    - name: config-volume
      mountPath: /etc/config

  volumes:
  - name: config-volume
    configMap:
      name: app-configmap

#inside pod /etc/config/app.conf
#in Docker file
#COPY inputs.conf /opt/splunk/etc/apps/myapp/local/
