K8S_Documentation/7.12 secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envar-demo2
  labels:
    purpose: demonstrate-envars2
spec:
  containers:
    - name: envar-demo-container
      image: nginx
      ports:
      - containerPort: 80
