K8S_Documentation/6.1.3 nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  selector:
    apps: dynamic-web
  ports:
    - name: http
      port: 80
      nodePort: 32000
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: nodeport-pod
  labels:
    apps: webapps
spec:
  containers:
  - name: pod1
    image: nginx
    ports:
      - containerPort: 80
