K8S_Documentation/6.4.1 probes_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-loadbalancer
  namespace: devops-demo

spec:
  selector:
    app: nginx

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: NodePort

  #NODEPORT-RAGE:30000-32766
