K8S_Documentation/6.6.0.1 service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: devops-demo

spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP

#kubectl apply -f service.yaml
#kubectl apply -f deployment.yaml
#kubectl apply -f ingress.yaml
#configure route-54 with proper domain name with k3s server ip (deena.work.gd)
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deplic/provider/cloud/deploy.yaml
#kubectl get ingress -A
#kubectl edit ingress nginx-ingress -n devops-demo     ===> change treafik to nginx
#kubectl get deployment -n devops-demo
#kubectl get pods -n devops-demo
#kubectl get svc -n devops-demo
#kubectl port-forward svc/nginx-service 8080:80 -n devops-demo (if not works)
#kubectl port-forward svc/nginx-service 8090:80 -n devops-demo
#sudo netstat -tulpn | grep 8080
#sudo ss -tulpn | grep 8080
#curl http://deena.work.gd
#curl -H "Host: deena.work.gd" http://localhost
#The Ingress Controller and application do not need to be in the same namespace.
#but the ingress on the rules and service must be same namespace
