K8S_Documentation/6.6.0.3 ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: devops-demo

spec:
  ingressClassName: nginx

  rules:
  - host: deena.work.gd

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-service

            port:
              number: 80
