K8S_Documentation/6.6.2 traefik.yaml

  #ingress/home_middleware.yaml
  # ========================
  apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    name: strip-home-prefix
    namespace: devops-demo
  spec:
    stripPrefix:
      prefixes:
        - /home
  
---

  #ingress/payment_middleware.yaml
  apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    name: strip-payment-prefix
    namespace: app-demo
  spec:
    stripPrefix:
      prefixes:
        - /payment

---

  #ingress/home_ingress.yaml
  # ========================
  apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    name: home-ingress
    namespace: devops-demo
  spec:
    entryPoints:
      - web
    routes:
    - match: Host(`deena.work.gd`) && PathPrefix(`/home`)
      kind: Rule
      services:
      - name: nginx-service
        port: 80
      middlewares:
      - name: strip-home-prefix

---

  #ingress/payment_ingress.yaml
  #=============================
  apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    name: payment-ingress
    namespace: app-demo
  spec:
    entryPoints:
      - web
    routes:
    - match: Host(`deena.work.gd`) && PathPrefix(`/payment`)
      kind: Rule
      services:
      - name: apache-service
        port: 80
      middlewares:
      - name: strip-payment-prefix


---

  #services/home_service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: nginx-service
    namespace: devops-demo
  spec:
    selector:
      app: nginx
    ports:
    - port: 80
      targetPort: 80
    type: ClusterIP
---
  #services/payment_service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: apache-service
    namespace: app-demo
  spec:
    selector:
      app: apache
    ports:
    - port: 80
      targetPort: 80
    type: ClusterIP


---
  #deployment/home_deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: nginx-deployment
    namespace: devops-demo
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: nginx
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 80
  
---


  #deployment/payment_deployment.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: apache-deployment
    namespace: app-demo
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: apache
    template:
      metadata:
        labels:
          app: apache
      spec:
        containers:
        - name: apache
          image: httpd
          ports:
          - containerPort: 80

# advantage of using middleware in traefik ingress controller?

# 1. Install Traefik using Helm (The standard industry practice)(if not present traefik service inside kube-system)
#kubectl get pods -n kube-system (traefik pods not runs, install trafik below commends )
#helm repo add traefik https://traefik.github.io/charts
#helm repo update
#helm install traefik traefik/traefik --namespace traefik --create-namespace

#mention in hosts port in k3s server
#vi /etc/hosts    =====>change    localhost to deena.work.gd(domain name)
# 2. Test your URLs
#curl http://deena.work.gd/home
#curl http://deena.work.gd/payment

#if not shows domain in web-browser, change (C:\Windows\System32\drivers\etc\hosts)  --->   13.250.18.30  deena.work.gd

# 3. Check Traefik specific resources
#kubectl get ingressroute -A
#kubectl get middlewares -A

# 4. Standard verification
#kubectl get pods -n devops-demo
#kubectl get svc -n devops-demo

# 5. Clean up your namespaces when finished
#kubectl delete ns devops-demo
#kubectl delete ns app-demo
#kubectl delete ns traefik

#Without Middleware:
#User requests: deena.work.gd/home
#Traefik sends the path /home straight into the NGINX container.
#NGINX looks for a folder named /home inside its system.
#It doesn't exist $\rightarrow$ 404 Not Found.

#With Middleware (StripPrefix):
#User requests: deena.work.gd/home
#Traefik intercepts it and applies the middleware.
#The middleware slices off /home and changes the path to /.Traefik sends / to the NGINX container.
#NGINX sees the / and happily serves its main default welcome page (which is exactly what you saw work successfully!).

#if we using multiple node we need to load balancer for configure multiple applications in k3s
#Internet--->AWS Load Balancer--->Node1 (K3s Server),Node2 (Worke)--->Traefik--->ClusterIP Services
#kubectl get svc -n kube-system    ===>  traefik   LoadBalancer   80:31245/TCP,443:32456/TCP  (or) traefik   LoadBalancer   80:31245/TCP,443:32456/TCP
#kubectl edit svc traefik -n kube-system     ===> node port 31234 or 31567
#aws--->elb--->create--->NLB--->listerners(80,443)-->create --->target group-->instance(master,worker)-->health check(tcp:80)--> attach TG to load balancer
#aws--->route 53--->create---> A record--->deena.work.gd  ---> NLB DNS name(link)
#
#instead of create NLB and R-53. execute below script
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: nlb
#spec:
# type: LoadBalancer
#
#
#
#
#
